added worker declaration text (#307)
Added new text (Worker Declaration) to About us section


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     home = "Home"
     aboutUs = "About Us"
     statutes = "Statutes"
+    declaration = "Declaration"
     register = "Application"
     events = "Events"
     workplaces = "Workplaces"
@@ -73,6 +74,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         home = "Domů"
         aboutUs = "O nás"
         statutes = "Stanovy"
+        declaration = "Deklarace"
         register = "Přihláška"
         events = "Akce"
         workplaces = "Pracoviště"
