feat: add a “For Members” section, fixes #299 (#316)
Closes #314


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/config.toml
+++ b/config.toml
@@ -40,6 +40,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     faq = "FAQ"
     statements = "Statements"
     career = "Career"
+    forMembers = "For Members"
   [params.home]
     participateTitle = "How to participate?"
     membershipTitle = "We provide..."
@@ -81,6 +82,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         faq = "Časté dotazy"
         statements = "Prohlášení"
         career = "Career"
+        forMembers = "Pro členstvo"
       [languages.cs.params.home]
         participateTitle = "Jak se zapojit?"
         membershipTitle = "Členství ti přinese..."
